--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                 <!-- FORMULARIO -->
 
                 <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                  <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Correo electronico</label>
-          
+      
                   <div class="colFor form-floating">
                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                       <option selected>Monto</option>
@@ -261,7 +261,7 @@
                     <label for="floatingSelect">Selecciona</label>
                   </div> </br>
                   <div class="colFor form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Nombre</label>
                   </div>
                   <div class="colFor form-floating mb-3">
