--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <label for="floatingInput">Nombre</label>
                   </div>
                   <div class="colFor form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Telefono</label>
                   </div>
                   <div class="colFor form-floating">
