--- a/index.html
+++ b/index.html
@@ -231,7 +231,29 @@
                 </Br></Br></Br>
       
                 <!-- FORMULARIO -->
+                <form name="contact" method="POST" data-netlify="true">
+                  <p>
+                    <label>Your Name: <input type="text" name="name" /></label>   
+                  </p>
+                  <p>
+                    <label>Your Email: <input type="email" name="email" /></label>
+                  </p>
+                  <p>
+                    <label>Your Role: <select name="role[]" multiple>
+                      <option value="leader">Leader</option>
+                      <option value="follower">Follower</option>
+                    </select></label>
+                  </p>
+                  <p>
+                    <label>Message: <textarea name="message"></textarea></label>
+                  </p>
+                  <p>
+                    <button type="submit">Send</button>
+                  </p>
+                </form>
 
+                <!-- FORMULARIO -->
+<!-- 
                 <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
                   <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Correo electronico</label>
@@ -316,7 +338,7 @@
                 </form>
                 </div>
             </div>
-        </div>
+        </div> -->
            
 
         <div class="container">
