--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <label>Your Name: <input type="text" name="name" /></label>   
                   </p>
                   <p>
-                    <label>Your Email: <input type="email" name="email" /></label>
+                    <label>Your Email: <input type="email" name="email"  class="form-control mb-4" id="floatingInput" /></label>
                   </p>
                   <p>
                     <label>Your Role: <select name="role[]" multiple>
@@ -251,6 +251,8 @@
                     <button type="submit">Send</button>
                   </p>
                 </form>
+
+            
 
                 <!-- FORMULARIO -->
 <!-- 
