--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
                 <!-- FORMULARIO -->
 
                 <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
-                  <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com" name="Correo">
+                  <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com" name="email">
                   <label for="floatingInput">Correo electronico</label>
       
                   <div class="colFor form-floating">
-                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="Monto">
+                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="select">
                       <option selected>Monto</option>
                       <option value="1">50,000.00</option>
                       <option value="2">60,000.00</option>
@@ -285,15 +285,15 @@
                     <label for="floatingSelect">Selecciona</label>
                   </div> </br>
                   <div class="colFor form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="Nombre">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="name">
                     <label for="floatingInput">Nombre</label>
                   </div>
                   <div class="colFor form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="Telefono">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="number">
                     <label for="floatingInput">Telefono</label>
                   </div>
                   <div class="colFor form-floating">
-                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="Estado">
+                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="select">
                       <option selected>Estado</option>
                       <option value="1">Aguascalientes</option>
                       <option value="2">Baja California</option>
