--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                 <!-- FORMULARIO -->
 
                 <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
+                  <label for="floatingInput">Correo electronico: </label>
                   <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com" name="email">
-                  <label for="floatingInput">Correo electronico</label>
-      
+                </label>
                   <div class="colFor form-floating">
                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="select">
                       <option selected>Monto</option>
