--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <!-- FORMULARIO -->
 
                 <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
-                  <label for="floatingInput">Correo electronico: </label>
+                  <label for="floatingInput">Correo electronico: 
                   <input type="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com" name="email">
                 </label>
                   <div class="colFor form-floating">
