--- a/index.html
+++ b/index.html
@@ -233,31 +233,15 @@
                 <!-- FORMULARIO -->
                 <form name="contact" method="POST" data-netlify="true">
                   <p>
-                    <label>Nombre del cliente: <input type="text" name="name" /></label>   
+                    <label>Your Name: <input type="text" name="name" /></label>   
                   </p>
                   <p>
-                    <label>Corre: <input type="email" name="email"  class="form-control mb-4" id="floatingInput" /></label>
+                    <label>Your Email: <input type="email" name="email" /></label>
                   </p>
                   <p>
                     <label>Your Role: <select name="role[]" multiple>
-                      <option value="50,000.00">50,000.00</option>
-                      <option value="60,000.00">60,000.00</option>
-                      <option value="3">70,000.00</option>
-                      <option value="4">80,000.00</option>
-                      <option value="5">90,000.00</option>
-                      <option value="6">100,000.00</option>
-                      <option value="7">200,000.00</option>
-                      <option value="8">300,000.00</option>
-                      <option value="9">400,000.00</option>
-                      <option value="10">600,000.00</option>
-                      <option value="11">700,000.00</option>
-                      <option value="12">800,000.00</option>
-                      <option value="13">900,000.00</option>
-                      <option value="14">1,000,000.00</option>
-                      <option value="14">2,000,000.00</option>
-                      <option value="14">3,000,000.00</option>
-                      <option value="14">4,000,000.00</option>
-                      <option value="14">5,000,000.00</option>
+                      <option value="leader">Leader</option>
+                      <option value="follower">Follower</option>
                     </select></label>
                   </p>
                   <p>
