--- a/index.html
+++ b/index.html
@@ -251,8 +251,57 @@
                     <button type="submit">Send</button>
                   </p>
                 </form>
+        </div> 
+      </div>  
+    </div> 
 
-            
+        <div class="container">
+            <div class="row align-items-start">
+              <div class="col">
+               <pr class="txtFor1">
+                   HORARIOS </br>
+               </pr>
+               <pr class="txtFor2">
+                Lunes a Viernes</br>
+                10 AM - 6 PM 
+            </pr>
+            </div>
+              <div class="col">
+                <pr class="txtFor1">
+                    REDES SOCIALES </br>
+                </pr>
+                <pr class="txtFor2">
+                <img src="/imagenes/faceLogo.png" alt="" class="face">
+                <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
+             </pr>           
+             </div>
+              <div class="col">
+                <pr class="txtFor1">
+                    CONTACTOS </br>
+                </pr>
+                <pr class="txtFor2">
+                5574906483 </br>5513762413
+             </pr>
+            </div>
+            </div>
+        </div>
+    </br>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
 
                 <!-- FORMULARIO -->
 
@@ -340,53 +389,4 @@
                 </form>
                 </div>
             </div>
-        </div> -->
-          
-
-        <div class="container">
-            <div class="row align-items-start">
-              <div class="col">
-               <pr class="txtFor1">
-                   HORARIOS </br>
-               </pr>
-               <pr class="txtFor2">
-                Lunes a Viernes</br>
-                10 AM - 6 PM 
-            </pr>
-            </div>
-              <div class="col">
-                <pr class="txtFor1">
-                    REDES SOCIALES </br>
-                </pr>
-                <pr class="txtFor2">
-                <img src="/imagenes/faceLogo.png" alt="" class="face">
-                <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
-             </pr>           
-             </div>
-              <div class="col">
-                <pr class="txtFor1">
-                    CONTACTOS </br>
-                </pr>
-                <pr class="txtFor2">
-                5574906483 </br>5513762413
-             </pr>
-            </div>
-            </div>
-        </div>
-    </br>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+        </div> --> -->
