--- a/index.html
+++ b/index.html
@@ -255,25 +255,21 @@
                     <label for="floatingInput">Correo: 
                       <input type="email" name="email" class="form-control mb-4" id="floatingInput"/></label>
                   </p>
-                  <p>
+                  <!-- <p>
                     <label for="floatingInput">Monto: 
                       <select name="role[]" multiple class="form-control mb-4" id="floatingInput" >
                       <option value="leader">Leader</option>
                       <option value="follower">Follower</option>
                     </select></label>
                   </p>
-                  <!-- <div class="colFor form-floating">
-                    <textarea class=" form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="Comentario"></textarea>
-                    <label for="floatingTextarea2">Escribe tu comentario</label>
-                  </div> -->
 
                   <p>
                     <label for="floatingInput">Mensaje: 
-                      <textarea name="message" class=" form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" ></textarea></label>
+                      <textarea name="message" class=" form-control" placeholder="Leave a comment here"  style="height: 100px" ></textarea></label>
                   </p>
                   <p>
                     <button type="submit">Send</button>
-                  </p>
+                  </p> -->
                 </form>
         </div> 
       </div>  
