--- a/index.html
+++ b/index.html
@@ -252,21 +252,19 @@
                       <input type="text" name="name" class="form-control mb-4" id="floatingInput" /></label>   
                   </p>
                   <p>
-                    <label for="floatingInput">Correo: 
-                      <input type="email" name="email" class="form-control mb-4" id="floatingInput"/></label>
+                    <label for="floatingInput">Tu correo: 
+                      <input type="email" name="email" /></label>
                   </p>
-                  <!-- <p>
+                  <p>
                     <label for="floatingInput">Monto: 
-                      <select name="role[]" multiple class="form-control mb-4" id="floatingInput" >
+                      <select name="role[]" multiple>
                       <option value="leader">Leader</option>
                       <option value="follower">Follower</option>
                     </select></label>
                   </p>
-
                   <p>
-                    <label for="floatingInput">Mensaje: 
-                      <textarea name="message" class=" form-control" placeholder="Leave a comment here"  style="height: 100px" ></textarea></label>
-                  </p> -->
+                    <label>Mensaje: <textarea name="message"></textarea></label>
+                  </p>
                   <p>
                     <button type="submit">Send</button>
                   </p>
