--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   </p>
                   <p>
                     <label for="floatingInput">Tu correo: 
-                      <input type="email" name="email" /></label>
+                      <input type="email" name="email" class="form-control mb-4" id="floatingInput"/></label>
                   </p>
                   <p>
                     <label for="floatingInput">Monto: 
