--- a/index.html
+++ b/index.html
@@ -243,10 +243,80 @@
 
 
                 <!-- FORMULARIO -->
+                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                  <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="subject">Subject:</label>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea class="form-control" rows="10" id="message" name="message" required></textarea>
+                  </div>
+                  <div class="form-group">
+                    <div data-netlify-recaptcha="true"></div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
 
-                <form name="contact" method="POST" data-netlify="true" class="colFor form-floating mb-3">
 
-                  <div class="colFor form-floating">
+        <div class="container">
+            <div class="row align-items-start">
+              <div class="col">
+               <pr class="txtFor1">
+                   HORARIOS </br>
+               </pr>
+               <pr class="txtFor2">
+                Lunes a Viernes</br>
+                10 AM - 6 PM 
+            </pr>
+            </div>
+              <div class="col">
+                <pr class="txtFor1">
+                    REDES SOCIALES </br>
+                </pr>
+                <pr class="txtFor2">
+                <img src="/imagenes/faceLogo.png" alt="" class="face">
+                <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
+             </pr>           
+             </div>
+              <div class="col">
+                <pr class="txtFor1">
+                    CONTACTOS </br>
+                </pr>
+                <pr class="txtFor2">
+                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
+                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
+             </pr>
+            </div>
+            </div>
+        </div>
+    </br>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
+<!--  
+              <div class="colFor form-floating">
                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="select">
                       <option selected>Monto</option>
                       <option value="1">50,000.00</option>
@@ -320,66 +390,4 @@
                     <textarea class=" form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="Comentario"></textarea>
                     <label for="floatingTextarea2">Escribe tu comentario</label>
                   </div>
-                  <button class="btn btn-sm btn-primary" type="submit"> Enviar 
-                  </button>
-
-                </form>
-                </div>
-            </div>
-        </div> 
-        </div> 
-      </div>  
-    </div> 
-
-    
-
-        <div class="container">
-            <div class="row align-items-start">
-              <div class="col">
-               <pr class="txtFor1">
-                   HORARIOS </br>
-               </pr>
-               <pr class="txtFor2">
-                Lunes a Viernes</br>
-                10 AM - 6 PM 
-            </pr>
-            </div>
-              <div class="col">
-                <pr class="txtFor1">
-                    REDES SOCIALES </br>
-                </pr>
-                <pr class="txtFor2">
-                <img src="/imagenes/faceLogo.png" alt="" class="face">
-                <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
-             </pr>           
-             </div>
-              <div class="col">
-                <pr class="txtFor1">
-                    CONTACTOS </br>
-                </pr>
-                <pr class="txtFor2">
-                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
-                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
-             </pr>
-            </div>
-            </div>
-        </div>
-    </br>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
- 
-             
+                   -->
