--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
         <p class="titulo1">Préstamos, financiamiento y reestructuración de deuda para tu empresa o para cubrir compromisos personales</p>
     </BR>
         <p class="titulo1">Te ofrecemos asesoría en evaluación y planeación de tu deuda.</p>
-
     </div>
             </div>
         </div>
         </div>
+      </div>
         <!-- PRESTACIONES -->
 <div class="container">
   <div class="row">
@@ -181,7 +181,7 @@
     <img src="/imagenes/apoyo.svg" alt="" class="nube">
   </div>
   <div class="col">
-  </br></br></br></br></br></br></br></br></br></br>
+  <!-- </br></br></br></br></br></br></br></br></br></br> -->
     <p class="prestamoTxt">impulsado por</p>
     <p class="prestamoTxt2">PRONAFIM</p>
     <p class="prestamoTxt3">Programa Nacional de Financiamiento</p>
@@ -205,14 +205,7 @@
   </div>
   </div>
 </div>
-
-
-
-
-        
         <!-- LOCALICACION -->
-  
-
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -231,8 +224,6 @@
                         </div>
                 </div>
             </div>
-
-  
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -241,30 +232,43 @@
                 <div class="col">
                 </Br></Br></Br>
 
-
                 <!-- FORMULARIO -->
                 <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                 <!-- Nombre -->
                   <div class="form-group">
-                    <label for="name">Name:</label>
+                    <label for="name">Nombre del cliente:</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                   </div>
+                  <!-- correo -->
                   <div class="form-group">
-                    <label for="email">Email:</label>
+                    <label for="email">Correo electronico:</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                   </div>
+                  <!-- monto -->
                   <div class="form-group">
-                    <label for="subject">Subject:</label>
+                    <label for="subject">Monto que desea: </label>
                     <input type="text" class="form-control" id="subject" name="subject" required>
                   </div>
+                  <!-- Estado  -->
                   <div class="form-group">
-                    <label for="message">Message:</label>
+                    <label for="subject">Estado: </label>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
+                  </div>                  
+                  <!-- mensaje -->
+                  <div class="form-group">
+                    <label for="message">Mensaje: </label>
                     <textarea class="form-control" rows="10" id="message" name="message" required></textarea>
                   </div>
                   <div class="form-group">
                     <div data-netlify-recaptcha="true"></div>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                  </div></br>
+                  <button type="submit" class="btn btn-primary">Enviar datos</button>
                 </form>
+                </div>
+              </div>
+            </div>
+
+
 
 
         <div class="container">
