--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <p class="titulo10"></BR></BR></BR></BR></BR></BR></BR>
-        -Apoyo a madres solteras/mujer emprendedora</BR></BR></BR>
-        -Becas estudiantes </BR></BR></BR>
-        -Apoyo a adultos mayores</BR></BR></BR>
-        -Apoyo legal + psicologico </BR></BR></BR>
+      <p class="titulo10"></BR></BR></BR></BR></BR></BR>
+        -Apoyo a madres solteras/mujer emprendedora</BR></BR>
+        -Becas estudiantes </BR></BR>
+        -Apoyo a adultos mayores</BR></BR>
+        -Apoyo legal + psicologico </BR></BR>
         -Acceso al fondo de credito 
       </p>
     </div>
@@ -268,9 +268,7 @@
               </div>
             </div>
 
-
-
-
+<!-- HORARIOS -->
         <div class="container">
             <div class="row align-items-start">
               <div class="col">
