--- a/index.html
+++ b/index.html
@@ -17,33 +17,27 @@
     <title>CREDICO</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg shadow-lg fixed-top " style="background-color: transparent;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="/imagenes/Logotipo.png" alt="" class="logotipo" />
-          <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
- 
-          </ul>
-        </div>
-      </div>
-    </nav>
+
+    <!-- barra -->
+    <div class="navbar">
+      <a class="logo" href="#"> 
+        <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
+        <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
+      </a>
+      <ul class="nav">
+  <li><a href="#home">INICIO</a></li>
+  <li><a href="#nosotros">NOSOTROS</a></li>
+  <li><a href="#pronafim">PRONAFIM</a></li>
+  <li><a href="#apoyo">APOYO</a></li>
+  <li><a href="#ubicacion">UBICACION</a></li>
+  <li><a href="#formulario">FORMULARIO</a></li>
+  </ul>
+  </div>
+  <section class="banner-area" id="home">
+  </section>
+  
+    
+
     <!-- BURBURJAS -->
     <div class="burbuja">
       <img src="/imagenes/dinero.png" alt="" class="tamaño" />
@@ -92,21 +86,17 @@
     </div>
 
     <!-- imagen principal -->
-    <img
-      src="/imagenes/principal.jpg"
-      alt=""
-      class="principal img-fluid cover mb-5"
-    />
+
     <div class="parrafo">
         <pr> TU PRESTAMO EN 24 HRS</pr>
     </br></br>
     <pr class="parrafo-1"> La mejor forma de crecer es emprendiendo tu propio negocio y nosotros te facilitamos el proceso</pr>
     </div>
-
     <!-- NOSOTROS -->
-<div class="container">
+    <section class="nosotros-area" id="nosotros">
+      <div class="container">
 <div class="card shadow-lg mb-5">
-    <div class="card-header"> 
+    <div class="card-header" > 
         <h4 class="text-center">¿QUIENES SOMOS? </h4>
 </div>
 <div class="card-body">
@@ -125,8 +115,10 @@
 </div>
     </div>
 </div>
-</div>
-    <!-- NUESTROS SERVICIOS -->
+</div>  
+</div>  
+</section>
+<!-- NUESTROS SERVICIOS -->
     <div class="container">
         <div class="card shadow-lg mb-5">
             <div class="card-header"> 
@@ -175,6 +167,7 @@
         </div>
       </div>
         <!-- PRESTACIONES -->
+<section class="pronafim-area" id="pronafim">
 <div class="container">
   <div class="row">
   <div class="col">
@@ -189,6 +182,9 @@
   </div>
 </div>
 </div>
+</section>
+<!-- APOYO -->
+<section class="apoyo-area" id="apoyo">
 <div class="container">
   <div class="row">
     <div class="col">
@@ -201,11 +197,13 @@
       </p>
     </div>
   <div class="col">
-<img src="/imagenes/casa.svg" alt="">
+<img src="/imagenes/casa.svg" alt="" class="casa" >
   </div>
   </div>
 </div>
+</section>
         <!-- LOCALICACION -->
+        <section class="ubicacion-area" id="ubicacion">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -224,6 +222,9 @@
                         </div>
                 </div>
             </div>
+          </section>
+            <!-- FORMULARIO IMAGEN -->
+    <section class="formulario-area" id="formulario">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -231,7 +232,7 @@
                 </div>
                 <div class="col">
                 </Br></Br></Br>
-
+            
                 <!-- FORMULARIO -->
                 <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
                  <!-- Nombre -->
@@ -253,7 +254,12 @@
                   <div class="form-group">
                     <label for="subject">Estado: </label>
                     <input type="text" class="form-control" id="subject" name="subject" required>
-                  </div>                  
+                  </div>       
+                  <!-- Telefono  -->
+                  <div class="form-group">
+                    <label for="subject">Telefono: </label>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
+                  </div>                      
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
@@ -267,7 +273,7 @@
                 </div>
               </div>
             </div>
-
+  </section>
 <!-- HORARIOS -->
         <div class="container">
             <div class="row align-items-start">
