--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <li><a href="#apoyo">APOYO</a></li>
   <li><a href="#ubicacion">UBICACION</a></li>
   <li><a href="#formulario">FORMULARIO</a></li>
+  <li><a href="#contacto">CONTACTOS</a></li>
   </ul>
   </div>
   <section class="banner-area" id="home">
@@ -92,7 +93,7 @@
     </br></br>
     <pr class="parrafo-1"> La mejor forma de crecer es emprendiendo tu propio negocio y nosotros te facilitamos el proceso</pr>
     </div>
-    <!-- NOSOTROS -->
+<!-- NOSOTROS -->
     <section class="nosotros-area" id="nosotros">
       <div class="container">
 <div class="card shadow-lg mb-5">
@@ -217,9 +218,7 @@
                         Montecito 38 Colonia Napoles Benito Juarez CD Mexico
                         </p>
                         </div>
-                        <div class="col">
-                            <img src="/imagenes/localizacion.svg" alt="" class="ubicacion">
-                        </div>
+
                 </div>
             </div>
           </section>
@@ -274,7 +273,8 @@
               </div>
             </div>
   </section>
-<!-- HORARIOS -->
+<!-- contactos -->
+<section class="contacto-area" id="contacto">
         <div class="container">
             <div class="row align-items-start">
               <div class="col">
@@ -307,6 +307,7 @@
             </div>
         </div>
     </br>
+    </section>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
