--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <body>
 
     <!-- barra -->
-    <div class="navbar">
+    <div class="navbar ">
       <a class="logo" href="#"> 
         <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
         <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
       </a>
-      <ul class="nav ">
+      <ul class="nav justify-content-end ">
   <li><a href="#home">INICIO</a></li>
   <li><a href="#nosotros">NOSOTROS</a></li>
   <li><a href="#pronafim">PRONAFIM</a></li>
