--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
         <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
       </a>
-      <ul class="nav ">
+      <ul class="nav nav-a">
   <li><a href="#home">INICIO</a></li>
   <li><a href="#nosotros">NOSOTROS</a></li>
   <li><a href="#pronafim">PRONAFIM</a></li>
@@ -276,28 +276,14 @@
               </div>
             </div>
   </section>
+</br></br></br></br></br>
 <!-- contactos -->
 <section class="contacto-area" id="contacto">
         <div class="container">
             <div class="row align-items-start">
-              <div class="col">
-               <pr class="txtFor1">
-                   HORARIOS </br>
-               </pr>
-               <pr class="txtFor2">
-                Lunes a Viernes</br>
-                10 AM - 6 PM 
-            </pr>
+            <div class="col">
+              <img src="/imagenes/redes.svg" alt="" class="redes">
             </div>
-              <div class="col">
-                <pr class="txtFor1">
-                    REDES SOCIALES </br>
-                </pr>
-                <pr class="txtFor2">
-                <img src="/imagenes/faceLogo.png" alt="" class="face">
-                <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
-             </pr>           
-             </div>
               <div class="col">
                 <pr class="txtFor1">
                     CONTACTOS </br>
@@ -305,12 +291,28 @@
                 <pr class="txtFor2">
                 <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
                 <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
-             </pr>
+             </pr></br></br></br>
+             <pr class="txtFor1">
+              HORARIOS </br>
+          </pr>
+          <pr class="txtFor2">
+           Lunes a Viernes</br>
+           10 AM - 6 PM 
+       </pr> </br></br></br>
+       <pr class="txtFor1">
+        REDES SOCIALES </br>
+    </pr>
+    <pr class="txtFor2">
+    <img src="/imagenes/faceLogo.png" alt="" class="face">
+    <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
+ </pr> 
             </div>
             </div>
         </div>
     </br>
     </section>
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
