--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
                   <!-- Estado  -->
                   <div class="form-group">
                     <label for="subject">Estado: </label>
-                    <input type="text" class="form-control" id="subject" name="subject" required>
+                    <input type="text" class="form-control" id="subject" name="monto" required>
                   </div>       
                   <!-- Telefono  -->
                   <div class="form-group">
                     <label for="subject">Telefono: </label>
-                    <input type="text" class="form-control" id="subject" name="subject" required>
+                    <input type="text" class="form-control" id="subject" name="telefono" required>
                   </div>                      
                   <!-- mensaje -->
                   <div class="form-group">
