--- a/index.html
+++ b/index.html
@@ -252,16 +252,16 @@
                     <label for="subject">Monto que desea: </label>
                     <input type="text" class="form-control" id="subject" name="subject" required>
                   </div>
-                  <!-- Estado  -->
+                   <!-- estado -->
                   <div class="form-group">
                     <label for="subject">Estado: </label>
-                    <input type="text" class="form-control" id="subject" name="monto" required>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
                   </div>       
-                  <!-- Telefono  -->
+                  <!-- telefono -->  
                   <div class="form-group">
-                    <label for="subject">Telefono: </label>
-                    <input type="text" class="form-control" id="subject" name="telefono" required>
-                  </div>                      
+                    <label for="subject">Estado: </label>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
+                  </div>         
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
