--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                   </div>       
                   <!-- telefono -->  
                   <div class="form-group">
-                    <label for="subject">Estado: </label>
+                    <label for="subject">telefono: </label>
                     <input type="text" class="form-control" id="subject" name="text" required>
                   </div>         
                   <!-- mensaje -->
