--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
                   <!-- monto -->
                   <div class="form-group">
                     <label for="subject">Monto que desea: </label>
-                    <input type="text" class="form-control" id="subject" name="text" required>
+                    <input type="text" class="form-control" id="subject" name="subject" required>
                   </div>
                    <!-- estado -->
                   <div class="form-group">
                     <label for="subject">Estado: </label>
-                    <input type="text" class="form-control" id="subject" name="text" required>
+                    <input type="text" class="form-control" id="subject" name="name" required>
                   </div>       
-                  <!-- telefono -->  
+                  <!-- monto -->  
                   <div class="form-group">
-                    <label for="subject">telefono: </label>
-                    <input type="text" class="form-control" id="subject" name="text" required>
+                    <label for="subject">Estado: </label>
+                    <input type="text" class="form-control" id="subject" name="name" required>
                   </div>         
                   <!-- mensaje -->
                   <div class="form-group">
