--- a/index.html
+++ b/index.html
@@ -247,6 +247,11 @@
                     <label for="email">Correo electronico:</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                   </div>
+                  <!-- numero -->
+                  <div class="form-group">
+                    <label for="number">Telefono:</label>
+                    <input type="number" class="form-control" id="number" name="number" required>
+                  </div>
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
