--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
                     <label for="number">Telefono:</label>
                     <input type="number" class="form-control" id="number" name="number" required>
                   </div>
+                  <!-- Estado -->
+                  <div class="form-group">
+                    <label for="Estado">Estado donde vive:</label>
+                    <input type="text" class="form-control" id="Estado" name="Estado" required>
+                  </div>
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
@@ -261,6 +266,8 @@
                     <div data-netlify-recaptcha="true"></div>
                   </div></br>
                   <button type="submit" class="btn btn-primary">Enviar datos</button>
+                  <button type="reset" class="btn btn-primary">Borrar datos</button>
+
                 </form>
                 </div>
               </div>
