--- a/index.html
+++ b/index.html
@@ -256,7 +256,19 @@
                   <div class="form-group">
                     <label for="Estado">Estado donde vive:</label>
                     <input type="text" class="form-control" id="Estado" name="Estado" required>
-                  </div>
+                  </div> </br>
+                     <!-- monto -->
+                    <div class="form-floating">
+                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
+                         <option selected>Selecciona el monto</option>
+                         <option value="1">One</option>
+                         <option value="2">Two</option>
+                         <option value="3">Three</option>
+                     </select>    
+                            <label for="floatingSelect">Works with selects</label>
+                    </div>
+                  </br>
+
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
