--- a/index.html
+++ b/index.html
@@ -261,11 +261,18 @@
                     <div class="form-floating">
                      <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
                          <option selected>Selecciona el monto</option>
-                         <option value="1">One</option>
-                         <option value="2">Two</option>
-                         <option value="3">Three</option>
+                         <option value="15,000">15,000</option>
+                         <option value="20,000">20,000</option>
+                         <option value="25,000">25,000</option>
+                         <option value="30,000">30,000</option>
+                         <option value="35,000">35,000</option>
+                         <option value="40,000">40,000</option>
+                         <option value="45,000">45,000</option>
+                         <option value="50,000">50,000</option>
+                         <option value="55,000">55,000</option>
+
                      </select>    
-                            <label for="floatingSelect">Works with selects</label>
+                            <label for="floatingSelect">Monto: </label>
                     </div>
                   </br>
 
