--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <div class="form-floating">
                      <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
                          <option selected>Selecciona el monto</option>
-                         <option value="1">One</option>
+                         <option value="10,000">10,000</option>
                          <option value="2">Two</option>
                          <option value="3">Three</option>
                      </select>    
