--- a/index.html
+++ b/index.html
@@ -262,10 +262,26 @@
                      <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
                          <option selected>Selecciona el monto</option>
                          <option value="10,000">10,000</option>
-                         <option value="2">Two</option>
-                         <option value="3">Three</option>
+                         <option value="15,000">15,000</option>
+                         <option value="20,000">20,000</option>
+                         <option value="25,000">25,000</option>
+                         <option value="30,000">30,000</option>
+                         <option value="35,000">35,000</option>
+                         <option value="40,000">40,000</option>
+                         <option value="45,000">45,000</option>
+                         <option value="50,000">50,000</option>
+                         <option value="55,000">55,000</option>
+                         <option value="60,000">60,000</option>
+                         <option value="65,000">65,000</option>
+                         <option value="70,000">70,000</option>
+                         <option value="75,000">75,000</option>
+                         <option value="80,000">80,000</option>
+                         <option value="85,000">85,000</option>
+                         <option value="90,000">90,000</option>
+                         <option value="100,000">100,000</option>
+
                      </select>    
-                            <label for="floatingSelect">Monto: </label>
+                            <label for="floatingSelect">Monto </label>
                     </div>
                   </br>
 
