--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <input type="text" class="form-control" id="Estado" name="Estado" required>
                   </div> </br>
                      <!-- monto -->
-                    <div class="form-floating">
+                    <div class="colFor form-floating">
                      <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
                          <option selected>Selecciona el monto</option>
                          <option value="10,000">10,000</option>
@@ -279,16 +279,54 @@
                          <option value="85,000">85,000</option>
                          <option value="90,000">90,000</option>
                          <option value="100,000">100,000</option>
-
                      </select>    
                             <label for="floatingSelect">Monto </label>
                     </div>
                   </br>
-
+                     <!-- estado -->
+                     <div class="colFor form-floating">
+                      <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
+                          <option selected>Selecciona su Estado</option>
+                          <option value="Aguascalientes">Aguascalientes</option>
+                          <option value="Baja California">Baja California</option>
+                          <option value="Baja California Sur">Baja California Sur</option>
+                          <option value="4">Campeche</option>
+                          <option value="5">Chiapas</option>
+                          <option value="6">Chihuahua</option>
+                          <option value="7">Coahuila</option>
+                          <option value="8">Colima</option>
+                          <option value="9">Distrito Federal</option>
+                          <option value="10">Durango</option>
+                          <option value="11">Estado de Mexico</option>
+                          <option value="12">Guanajuato</option>
+                          <option value="13">Guerrero</option>
+                          <option value="14">Hidalgo</option>
+                          <option value="14">Jalisco</option>
+                          <option value="14">Michoacan</option>
+                          <option value="14">Morelos</option>
+                          <option value="14">Nayarit</option>
+                          <option value="14">Nuevo Leon</option>
+                          <option value="14">Oaxaca</option>
+                          <option value="14">Puebla</option>
+                          <option value="14">Queretaro</option>
+                          <option value="14">Quintana Roo</option>
+                          <option value="14">San Luis Potosi</option>
+                          <option value="14">Sinaloa</option>
+                          <option value="14">Sonora</option>
+                          <option value="14">Tabasco</option>
+                          <option value="14">Tamaulipas</option>
+                          <option value="14">Tlaxccala</option>
+                          <option value="14">Veracruz</option>
+                          <option value="14">Yucatan</option>
+                          <option value="14">Zacatecas</option>
+                      </select>    
+                             <label for="floatingSelect">Estado </label>
+                     </div>
+                   </br>
                   <!-- mensaje -->
                   <div class="form-group">
                     <label for="message">Mensaje: </label>
-                    <textarea class="form-control" rows="10" id="message" name="message" required></textarea>
+                    <textarea class="form-control" rows="2" id="message" name="message" required></textarea>
                   </div>
                   <div class="form-group">
                     <div data-netlify-recaptcha="true"></div>
