--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
                     <label for="number">Telefono:</label>
                     <input type="number" class="form-control" id="number" name="number" required>
                   </div>
-                </br>
 
                      <!-- monto -->
                     <div class="colFor form-floating">
@@ -325,9 +324,9 @@
                     <label for="message">Mensaje: </label>
                     <textarea class="form-control" rows="1" id="message" name="message" required></textarea>
                   </div>
-                  <!-- <div class="form-group">
+                  <div class="form-group">
                     <div data-netlify-recaptcha="true"></div>
-                  </div> -->
+                  </div>
                 </br>
                   <button type="submit" class="btn btn-primary">Enviar datos</button>
                   <button type="reset" class="btn btn-primary">Borrar datos</button>
