--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   <div class="form-group">
                     <label for="number">Telefono:</label>
                     <input type="number" class="form-control" id="number" name="number" required>
-                  </div></br></br>
+                  </div></br>
 
                      <!-- monto -->
                     <div class="colFor form-floating">
