--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
                     <label for="message">Mensaje: </label>
                     <textarea class="form-control" rows="1" id="message" name="message" required></textarea>
                   </div>
-                  <!-- <div class="form-group">
+                  <div class="form-group">
                     <div data-netlify-recaptcha="true"></div>
-                  </div> -->
+                  </div>
                 </br>
                   <button type="submit" class="btn btn-primary">Enviar datos</button>
                   <button type="reset" class="btn btn-primary">Borrar datos</button>
