--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
                     <textarea class="form-control" rows="1" id="message" name="message" required></textarea>
                   </div>
                   <div class="form-group">
-                    <div data-netlify-recaptcha="true"></div>
+                    <div data-netlify-recaptcha="true">
+                    </div>
                   </div>
-                </br>
                   <button type="submit" class="btn btn-primary">Enviar datos</button>
                   <button type="reset" class="btn btn-primary">Borrar datos</button>
 
