--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
                   <div class="form-group">
                     <div data-netlify-recaptcha="true">
                     </div>
+                    <button type="submit" class="btn btn-primary">Enviar datos</button>
+                    <button type="reset" class="btn btn-primary">Borrar datos</button>
                   </div>
                   <button type="submit" class="btn btn-primary">Enviar datos</button>
                   <button type="reset" class="btn btn-primary">Borrar datos</button>
