--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </div>
 </div>
 </section>
-        <!-- LOCALICACION -->
+        <!-- UBICACION -->
         <section class="ubicacion-area" id="ubicacion">
         <div class="container">
             <div class="row">
@@ -217,7 +217,7 @@
                 </div>
                 <div class="col">
                     <p class="titulo5">
-                    </Br></Br></Br>  
+                    </Br></Br></Br> </Br> </Br> </Br> </Br> </Br>  
                         Estamos muy cerca de ti </p>
                         <p class="titulo5-1">
                         Montecito 38 Colonia Napoles Benito Juarez CD Mexico
@@ -228,7 +228,7 @@
             </div>
           </section>
             <!-- FORMULARIO IMAGEN -->
-    <section class="formulario-area" id="formulario">
+    <section class="formulario-area colFor" id="formulario">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -321,9 +321,9 @@
                      </div>
                    </br>
                   <!-- mensaje -->
-                  <div class="form-group">
+                  <div class=" form-group">
                     <label for="message">Mensaje: </label>
-                    <textarea class="form-control" rows="1" id="message" name="message" required></textarea>
+                    <textarea class="colFor form-control" rows="1" id="message" name="message" required></textarea>
                   </div>
                   <div class="form-group">
                     <div data-netlify-recaptcha="true">
