--- a/index.html
+++ b/index.html
@@ -364,9 +364,8 @@
         REDES SOCIALES </br>
     </pr>
     <pr class="txtFor2">
-    <img src="/imagenes/faceLogo.png" alt="" class="face">
-    <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
- </pr> 
+    <img src="/imagenes/faceLogo.png" alt="" class="face"> CREDICO
+  </pr> 
             </div>
             </div>
         </div>
