--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     </br>
     </section>
 
-    <img src="/imagenes/rosa.jpg" alt="" class="rosa">
+    <img src="/imagenes/rosa2.jpg" alt="" class="rosa">
 
     <!-- Optional JavaScript; choose one of the two! -->
 
