--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
       </a>
       <ul class="nav nav-a">
-  <li><a href="#home">INICIO</a></li>
-  <li><a href="#nosotros">NOSOTROS</a></li>
-  <li><a href="#pronafim">PRONAFIM</a></li>
-  <li><a href="#apoyo">APOYO</a></li>
-  <li><a href="#ubicacion">UBICACION</a></li>
-  <li><a href="#formulario">FORMULARIO</a></li>
-  <li><a href="#contacto">CONTACTOS</a></li>
+  <li><a href="#home" class="na">INICIO</a></li>
+  <li><a href="#nosotros" class="na">NOSOTROS</a></li>
+  <li><a href="#pronafim" class="na">PRONAFIM</a></li>
+  <li><a href="#apoyo" class="na">APOYO</a></li>
+  <li><a href="#ubicacion" class="na">UBICACION</a></li>
+  <li><a href="#formulario" class="na">FORMULARIO</a></li>
+  <li><a href="#contacto" class="na">CONTACTOS</a></li>
   </ul>
   </div>
   <section class="banner-area" id="home">
