--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <img src="/imagenes/apoyo.svg" alt="" class="nube">
   </div>
   <div class="col">
-  </br></br></br></br></br></br></br></br></br></br>
+  </br></br></br></br></br></br></br></br></br>
     <p class="prestamoTxt">impulsado por</p>
     <p class="prestamoTxt2">PRONAFIM</p>
     <p class="prestamoTxt3">Programa Nacional de Financiamiento</p>
@@ -194,7 +194,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <p class="titulo10"></BR></BR></BR></BR></BR></BR>
+      <p class="titulo10"></BR></BR></BR>
         -Apoyo a madres solteras/mujer emprendedora</BR></BR>
         -Becas estudiantes </BR></BR>
         -Apoyo a adultos mayores</BR></BR>
