--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               <img src="/imagenes/redes.svg" alt="" class="redes">
             </div>
               <div class="col">
-                <pr class="txtFor1"></br></br>
+                <pr class="txtFor1"></br></br></br>
                     CONTACTOS </br>
                 </pr>
                 <pr class="txtFor2">
