--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
       </a>
       <ul class="nav nav-a">
-  <li><a href="#home" class="col-barra">INICIO</a></li>
-  <li><a href="#nosotros" class="col-barra">NOSOTROS</a></li>
-  <li><a href="#pronafim" class="col-barra">PRONAFIM</a></li>
-  <li><a href="#apoyo" class="col-barra">APOYO</a></li>
-  <li><a href="#ubicacion" class="col-barra">UBICACION</a></li>
-  <li><a href="#formulario" class="col-barra">FORMULARIO</a></li>
-  <li><a href="#contacto" class="col-barra">CONTACTOS</a></li>
+  <li><a href="#home" class="col-barra1">INICIO</a></li>
+  <li><a href="#nosotros" class="col-barra2">NOSOTROS</a></li>
+  <li><a href="#pronafim" class="col-barra3">PRONAFIM</a></li>
+  <li><a href="#apoyo" class="col-barra4">APOYO</a></li>
+  <li><a href="#ubicacion" class="col-barra5">UBICACION</a></li>
+  <li><a href="#formulario" class="col-barra6">FORMULARIO</a></li>
+  <li><a href="#contacto" class="col-barra7">CONTACTOS</a></li>
   </ul>
   </div>
   <section class="banner-area" id="home">
