--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <p class="titulo10"></BR></BR></BR></BR>
+      <p class="titulo10"></BR></BR></BR>
         -Apoyo a madres solteras/mujer emprendedora</BR></BR>
         -Becas estudiantes </BR></BR>
         -Apoyo a adultos mayores</BR></BR>
