--- a/index.html
+++ b/index.html
@@ -18,22 +18,45 @@
   </head>
   <body>
 
-    <!-- barra -->
-    <div class="navbar">
-      <a class="logo" href="#"> 
-        <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
-        <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
-      </a>
-      <ul class="nav nav-a">
-  <li><a href="#home" class="col-barra1">INICIO</a></li>
-  <li><a href="#nosotros" class="col-barra2">NOSOTROS</a></li>
-  <li><a href="#pronafim" class="col-barra3">PRONAFIM</a></li>
-  <li><a href="#apoyo" class="col-barra4">APOYO</a></li>
-  <li><a href="#ubicacion" class="col-barra5">UBICACION</a></li>
-  <li><a href="#formulario" class="col-barra6">FORMULARIO</a></li>
-  <li><a href="#contacto" class="col-barra7">CONTACTOS</a></li>
-  </ul>
-  </div>
+    <nav class="navbar navbar-expand-lg  ">
+      <div class="container-fluid">
+        <a class="logo" href="#"> 
+          <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
+          <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav my-auto">
+            <li class="nav-item">
+              <a class="nav-link active col-barra0" aria-current="page" href="#">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a href="#nosotros" class="nav-link active col-barra1" href="#">NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
+            </li>
+            <li class="nav-item">
+              <a href="#apoyo" class="nav-link active col-barra3" href="#">APOYO</a>
+            </li>
+            <li class="nav-item">
+              <a href="#ubicacion" class="nav-link active col-barra4" href="#">UBICACION</a>
+            </li>
+            <li class="nav-item">
+              <a href="#formulario" class="nav-link active col-barra5" href="#">FORMULARIO</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contacto" class="nav-link active col-barra6" href="#">CONTACTOS</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  
   <section class="banner-area" id="home">
   </section>
   
@@ -170,7 +193,7 @@
         </div>
         </div>
       </div>
- -
+
 
         <!-- PRESTACIONES -->
 <section class="pronafim-area" id="pronafim">
