--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     </div>
 
     <!-- imagen principal -->
-    <section class="banner-area" id="home">
-    </section>
+    
+    <img class="banner-area img-fluid" src="./imagenes//Cerdito.png" id="home" alt="Responsive image">
     <!-- texto principal -->
     <div class="parrafo">
         <pr> TU PRESTAMO EN 24 HRS</pr>
